--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	  "react-router-dom": "^6.22.2",
 	  "react-scripts": "5.0.1",
 	  "sass": "^1.71.1",
+	  "socket.io-client": "^4.7.5",
 	  "typescript": "^4.9.5",
 	  "web-vitals": "^2.1.4",
 	  "yup": "^1.3.3"
